# succulentio

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
succulentio/: __init__.py
succulentio/adapters/: __init__.py  cli.py
succulentio/app/: __init__.py
succulentio/app/functions/: create.py
succulentio/core/: manager.py  setup.py
succulentio/core/decorators/: function.py
